# rust-chip8

./: Cargo.toml  README.md
src/: lib.rs  main.rs  rom_config.rs
src/emulator/: ascii_display.rs  basics.rs  executor.rs  mod.rs  program.rs  vm.rs
src/visualizer/: mod.rs
tests/: test_opcode.rs
